setup: Add logback module to jlink image